--- a/install
+++ b/install
@@ -5,6 +5,7 @@ if [ $(whoami) != "root" ];then
 fi
 cd ..
 pip install requests
+pip install passlib
 cp -R blackbox/ /opt/
 echo '#!/bin/sh' > /bin/blackbox
 echo 'python /opt/blackbox/blackbox.py "$@"' >> /bin/blackbox
