--- a/install
+++ b/install
@@ -6,6 +6,7 @@ fi
 cd ..
 pip install requests
 pip install passlib
+pip install pexpect
 cp -R blackbox/ /opt/
 echo '#!/bin/sh' > /bin/blackbox
 echo 'python /opt/blackbox/blackbox.py "$@"' >> /bin/blackbox
