--- a/install
+++ b/install
@@ -14,4 +14,9 @@ chmod 755 /bin/blackbox
 chmod +x /bin/blackbox
 rm -rf blackbox/
 blackbox
+if [ $? -eq 0 ]; then
+	echo "WORKED ! NOW YOU CAN USE command : blackbox"
+else
+    echo "ERROR FAIL!"
+fi
 echo 'Worked Now you can use blackbox using command : blackbox'
